# EUDR_Risk_Assessment

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: farms_distance.csv  farms_distance_masked.csv  farms_neighborhood.csv  farms_neighborhood_multi.csv  farms_risk_raw.csv
docker/: docker-compose.yml
docs/: CODE_AUDIT.md  PIPELINE.md  phase4_model_comparison.md
src/: phase1_aoi_parcels.py  phase2_deforestation.py  phase3_postgis.py  phase4_distance.py  phase4_distance_masked.py  phase4_neighborhood_multi.py  phase4_scoring.py  phase4_scoring_v3.py  phase4_scoring_v3_sensitivity.py
src/api/: Dockerfile  database.py  main.py  schemas.py
src/frontend/: Dockerfile  app.js  config.js  docker-entrypoint.sh  index.html  style.css
src/testing/: check_defo_distribution.py  test_db.py  test_ee.py  verify_phase4.py
