[project]
name = "eudr-risk-assessment"
version = "0.1.0"
description = "EUDR Forest Risk Assessment Tool - geospatial pipeline for deforestation-risk scoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.0.0",
    "geemap>=0.32.0",
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.14.0",
    "psycopg2-binary>=2.9.0",
    "folium>=0.16.0",
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
]